# LangGraph-Chatbot-with-Memory-and-Tools

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docker/: Dockerfile.dev  Dockerfile.prod
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: app.js  index.html  style.css
src/: app.py  main.py
src/agents/: edges.py  graph.py  nodes.py  state.py
src/agents/prompts/: system_base.txt  tool_selector.txt
src/agents/tools/: search_tool.py
src/api/dependencies/: auth.py
src/api/routers/: health.py  v1_chat.py
src/api/schemas/: chat.py
src/config/: logging_cfg.py  settings.py
src/services/: memory.py
tests/: __init__.py  conftest.py
tests/integration/: test_endpoints.py
tests/unit/: test_nodes.py
